bridge/base/postgres-service.yaml
#! postgres-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: postgres-published
    namespace: nexus-phase-a
    labels:
        com.docker.compose.project: nexus-phase-a
        com.docker.compose.service: postgres
spec:
    selector:
        com.docker.compose.project: nexus-phase-a
        com.docker.compose.service: postgres
    ports:
        - name: postgres-5433
          port: 5433
          protocol: TCP
          targetPort: postgres-5432
